--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,14 @@
     display: none;
   }
 
+  h1#landing {
+    margin: 0;
+  }
+
+  h1#landing ~ p:first-of-type {
+    margin-top: 10px;
+  }
+
   h2 {
     color: var(--color-off-white);
     line-height: 1;
