--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,13 @@
     padding: 1rem;
   }
 
+  .about-green p {
+    font-weight: bold;
+    font-size: 0.9rem;
+    margin: 1.2rem 0 0.5rem 0;
+    user-select: none;
+  }
+
   .about-green a,
   .about-green a::selection {
     color: var(--color-link);
