--- a/css/secret.css
+++ b/css/secret.css
@@ -149,7 +149,7 @@
   }
 }
 
-/* --- */
+/* ------------------------------------------------ */
 
 @media only screen and (max-width: 700px) {
   #staticrypt_content {
@@ -157,7 +157,7 @@
     flex-direction: row;
     flex: 1 0 auto;
     padding-top: 50px;
-  } 
+  }
 
   .staticrypt-form {
     padding: 1rem;
@@ -167,8 +167,8 @@
       to bottom,
       transparent,
       var(--color-gray-850) 15%,
-      var(--color-gray-850) ,
-      transparent 
+      var(--color-gray-850),
+      transparent
     );
   }
 
@@ -222,19 +222,19 @@
     resize: none;
   }
 
-    input#staticrypt-password::placeholder {
-      color: var(--color-gray-600);
-    }
+  input#staticrypt-password::placeholder {
+    color: var(--color-gray-600);
+  }
 
-    input#staticrypt-password:focus {
-      background-color: var(--color-gray-750);
-      border-radius: 10px !important;
-      outline: none;
-    }
+  input#staticrypt-password:focus {
+    background-color: var(--color-gray-750);
+    border-radius: 10px !important;
+    outline: none;
+  }
 
-    input#staticrypt-password::placeholder {
-        color: var(--color-gray-500);
-      }
+  input#staticrypt-password::placeholder {
+    color: var(--color-gray-500);
+  }
 
   label {
     font-size: 1.2rem;
@@ -290,5 +290,4 @@
       var(--color-purple-dark)
     );
   }
-}
 }
