rss copy message mobile to the left

--- a/css/contact.css
+++ b/css/contact.css
@@ -52,7 +52,7 @@
     }
 
     button {
-      margin-top: 1rem;
+      margin-top: 15px;
       text-decoration: none;
       font-weight: bold;
       user-select: none;
