--- a/css/mobile.css
+++ b/css/mobile.css
@@ -807,6 +807,7 @@
     display: flex;
     margin: 0;
     min-width: 100%;
+    max-width: 100%;
     border-radius: 20px;
     overflow: hidden;
     background-color: #181818;
@@ -815,6 +816,8 @@
 
   #about-spotify img {
     min-width: 100%;
+    max-width: 100%;
+
   }
 
   span#sp-shadow {
