--- a/css/mobile.css
+++ b/css/mobile.css
@@ -802,14 +802,13 @@
     font-family: var(--font-jb-mono);
   }
 
-  a:has(#about-spotify) {
-    height: max-content;
 
-  }
 
   #about-spotify {
+    height: max-content;
     position: relative;
     display: flex;
+    align-items: flex-start;
     margin: 0;
     min-width: 100%;
     max-width: 100%;
@@ -822,7 +821,7 @@
   #about-spotify img {
     min-width: 100%;
     max-width: 100%;
-    scale: 0.9;
+
   }
 
   span#sp-shadow {
