--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,10 @@
     width: 100%;
   }
 
+  .sp-mobile {
+    display: none;
+  }
+
   section a {
     color: var(--color-link);
     text-decoration-thickness: 1px;
