--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
   }
 
   body {
-    color: var(--color-white);
+    color: var(--color-off-white);
     line-height: 1.6;
     padding: 0;
     margin: 0;
