--- a/css/variables.css
+++ b/css/variables.css
@@ -270,3 +270,24 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none;
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li {
+  cursor: default;
+}
+
+em {
+  font-style: oblique;
+}
+
+.spell-line {
+  color: SlateBlue;
+  font-size: 1.1rem;
+  font-style: italic;
+}
