--- a/css/style.css
+++ b/css/style.css
@@ -740,4 +740,9 @@
       0px 5px 10px 2px rgba(0, 0, 0, 0.5);
     border: var(--glass-border);
   }
+  .spell-line {
+    color: SlateBlue;
+    font-size: 1.1rem;
+    font-style: italic;
+  }
 }
