--- a/css/style.css
+++ b/css/style.css
@@ -324,10 +324,13 @@
   h2 {
     color: var(--color-off-white);
     line-height: 1;
+    margin-top: 60px;
+    margin-bottom: 0;
   }
 
   h3 {
-    margin-bottom: 0;
+    margin-top: 30px;
+    margin-bottom: 10px;
   }
 
   h3 + p {
