--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@
     caret-color: orange;
     height: 100%;
     /* overscroll-behavior: none; */
+
+    scroll-behavior: smooth;
   }
 
   body {
@@ -177,10 +179,7 @@
       inset 0px 15px 20px -10px rgba(0, 0, 0, 0.8);
     border: var(--glass-border);
     border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+
     padding: 1rem;
   }
 
@@ -705,6 +704,25 @@
     color: var(--color-off-white);
   }
   .webring-link:hover {
+    color: white;
+  }
+
+  .no-marker ul,
+  .no-marker ol {
+    list-style: none;
+    margin-bottom: 0;
+  }
+
+  .no-marker > ul {
+    padding-left: 10px;
+  }
+
+  .no-marker a {
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  .no-marker li::marker {
     color: white;
   }
 }
