--- a/css/style.css
+++ b/css/style.css
@@ -720,6 +720,13 @@
   .no-marker a {
     font-weight: bold;
     text-decoration: none;
+    color: var(--color-link) !important;
+  }
+  .no-marker a:hover {
+    color: var(--color-link-hover) !important;
+  }
+  .no-marker a:active {
+    color: var(--color-link-active) !important;
   }
 
   .no-marker li::marker {
